# RestTest

./: .gitignore  .gitmodules  README.MD
RestTest/: RestTest.sln
RestTest/RestTest.AspNet/: Program.cs  Startup.cs
RestTest/RestTest.Configuration/: Configuration.cs  CookiesConfig.cs  HeaderConfig.cs  JSONToEntityConverter.cs  RestTest.Configuration.csproj  SequenceConfiguration.cs  TestType.cs  UniqueConfiguration.cs  ValidationConfig.cs
RestTest/RestTest.Configuration.Test/: CofigurationTests.cs  ConfigurationUniqueTest.cs  EmptyJsonTest.cs  FullConfigurationFileTest.cs  RestTest.Configuration.Test.csproj  duplicated_keys_config.json  full_config.json  no_test_type.json  sequence_test.json  unique_test.json  unique_test_complex_body.json
RestTest/RestTest.Configuration.UnitTest/: ConfigurationSequenceTest.cs  ConfigurationUniqueTest.cs  FullConfigurationFileTest.cs  RestTest.Configuration.UnitTest.csproj  duplicated_key_no_names.json  many_unique_test.json  unique_test_complex_body.json
RestTest/RestTest.HttpServer.Test/: ExtensionMethods.cs  HttpServerHelp.cs
RestTest/RestTest.HttpServer.UnitTest/: ExtensionMethods.cs  HttpServerHelp.cs
RestTest/RestTest.JsonHelper/: JSON.cs  JsonValue.cs  JsonValueDouble.cs  JsonValueList.cs  JsonValueLong.cs  JsonValueObject.cs  JsonValueString.cs
RestTest/RestTest.JsonHelperTest/: OnComplexType.cs  RestTest.JsonHelperTest.csproj  SimpleJsonConverter.cs
cpp/: CMakeLists.txt  main.cpp
cpp/include/configuration/: Configuration.h
cpp/src/configuration/: Configuration.cpp
cpp/tests/: tests.cpp
(+187 files in other folders)
